# controllers/v1/userControllers.js
@@ -19,7 +19,7 @@ module.exports = {
         !identity_number ||
         !address
       ) {
-        return res.status(403).json({
+        return res.status(401).json({
           status: false,
           message: "Input must be required",
           data: null,
